--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,4 @@ leafmap
 owslib
 streamlit
 thebeans
--e git+https://github.com/phillipslucas/TheBeans#egg=thebeans
+# -e git+https://github.com/phillipslucas/TheBeans#egg=thebeans
